# AI_Agentic_Udacity

./: .gitignore  README.md
course1/: ORGANIZATION_SUMMARY.md  README.md  introduction-to-prompting-for-llm-reasoning-and-planning.ipynb  requirements.txt
course1/1-generic_prompting/: introduction-to-prompting-for-llm-reasoning-and-planning.ipynb  model-selection.ipynb
course1/2-Role_base-Prompting/: lesson-1-role-based-prompting.ipynb
course1/3-cot_and_react/: lesson-2-chain-of-thought-and-react-prompting-part-i (1).ipynb  lesson-2-chain-of-thought-and-react-prompting-part-ii (1).ipynb
course1/4-prompt-instruction-refinement/: lesson-3-prompt-instruction-refinement (1).ipynb
course1/7-chaining_prompts/: .gitignore  chaining-prompting.py  chaining-prompting_langgraph.py  lesson-4-chaining-prompts-for-agentic-reasoning.ipynb  practice_with_news.ipynb  readme.md
course1/8-feedback_loop/: .gitignore  CAMBIOS_REALIZADOS.md  INSTRUCCIONES_DE_USO.md  README_EXPLICACION.md  lesson-5-implementing-llm-feedback-loops.ipynb
course1/claims-workflow/: .gitignore  langgraph.json  pyproject.toml  test_direct.py  test_workflow.py
course1/claims-workflow/src/: gates.py  prompts.py  state.py  utils.py
course1/claims-workflow/src/agents/: __init__.py  claims_processor.py
course1/project_agent/: .gitignore  project_starter.ipynb  readme.md
course2-workflows/03-prompt-chaining-workflow/: demo.py  refinery_optimizer.py
course2-workflows/04-rounting/: demo.py  routing.py
course2-workflows/05-parallelization/: challenge.py  demo.py  demo_professional.py
(+21 files in other folders)
